feat: 集成登录注册功能以及角色权限菜单模型
